# cloudops-ai-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  incident_agent.py  log_agent.py  metrics_agent.py  model_adapter.py  remediation_agent.py
docs/: agents.md  architecture.md  aws-console-setup.md  production-best-practices.md  runbook.md
scripts/: deploy.sh  github_setup.sh  invoke_local.py
tests/: conftest.py  test_app.py  test_incident_agent.py  test_log_agent.py  test_metrics_agent.py  test_remediation_agent.py
tools/: __init__.py  cloudwatch_logs.py  cloudwatch_metrics.py
