[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "cloudops-ai-agent"
version         = "1.0.0"
description     = "AI-powered CloudOps incident investigation agent built on Amazon Bedrock"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
keywords        = ["aws", "bedrock", "ai-agent", "cloudops", "sre", "devops"]

authors = [
  { name = "Your Name", email = "you@example.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "moto[cloudwatch,logs,lambda,dynamodb]>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "boto3-stubs[cloudwatch,logs,bedrock-runtime,lambda]>=1.34",
  "python-dotenv>=1.0",
]

[project.scripts]
cloudops-invoke = "scripts.invoke_local:main"

[project.urls]
Homepage      = "https://github.com/your-org/cloudops-ai-agent"
Repository    = "https://github.com/your-org/cloudops-ai-agent"
Issues        = "https://github.com/your-org/cloudops-ai-agent/issues"
Changelog     = "https://github.com/your-org/cloudops-ai-agent/blob/main/CHANGELOG.md"

# ─────────────────────────────────────────────────────────────────────────────
# Tool: ruff (linter + formatter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = [".", "agents", "tools", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # do not perform function calls in default arguments
  "SIM108", # use ternary operator — often less readable
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─────────────────────────────────────────────────────────────────────────────
# Tool: mypy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
warn_return_any        = true
warn_unused_configs    = true
warn_unused_ignores    = true
ignore_missing_imports = true
files                  = ["agents", "tools", "app.py"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool: pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py"]
python_classes  = ["Test*"]
python_functions= ["test_*"]
addopts         = "-v --tb=short --strict-markers"
markers         = [
  "unit: fast unit tests with no AWS calls (mocked)",
  "integration: tests that require real AWS credentials",
  "slow: tests that take more than 10 seconds",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool: coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["agents", "tools", "app"]
omit     = ["tests/*", "scripts/*", "docs/*"]
branch   = true

[tool.coverage.report]
show_missing         = true
skip_covered         = false
fail_under           = 75
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]
